--- a/index.html
+++ b/index.html
@@ -22,28 +22,22 @@
           </h2>
           <div class="name-container input-box">
             <label for="name" class="sr-only">Nombre</label>
-            <input type="text" id="name" class="form-control"
-            placeholder="Ingrese su nombre" autofocus="">
+            <input type="text" id="name" class="form-control" placeholder="Ingrese su nombre" autofocus="" required="">
           </div>
           <div class="lastname-container input-box">
             <label for="lastname" class="sr-only">Apellido</label>
-            <input type="text" id="lastname" class="form-control"
-            placeholder="Ingrese su apellido">
+            <input type="text" id="lastname" class="form-control" placeholder="Ingrese su apellido" required="">
           </div>
           <div class="email-container input-box">
-            <label for="inputEmail" class="sr-only">
-              Correo Electrónico
-            </label>
-            <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico" >
+            <label for="inputEmail" class="sr-only"> Correo Electrónico</label>
+            <input type="email" id="input-email" class="form-control" placeholder="Ingrese su correo electrónico" required="">
           </div>
           <div class="form-group">
-            <label for="inputPassword" class="sr-only">
-              Contraseña
-            </label>
-            <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña">
+            <label for="inputPassword" class="sr-only">Contraseña</label>
+            <input type="password" id="input-password" class="form-control" placeholder="Ingrese su contraseña" required="">
           </div>
           <div class="form-group">
-            <select class="form-control" id="bici" required="">
+            <select class="form-control" id="bici" required>
               <option value="0">Selecciona tu tipo de bici</option>
               <option value="urbana">Urbana</option>
               <option value="treking">Treking</option>
@@ -56,10 +50,7 @@
             <input type="text" class="form-control" id="input-social" placeholder="Twitter">
           </div>
           <div class="checkbox">
-            <label>
-              <input type="checkbox" value="remember-me">
-              <span>Deseo recibir información vía email</span>
-            </label>
+            <label><input type="checkbox" value="remember-me"><span>Deseo recibir información vía email</span></label>
           </div>
           <button class="btn btn-lg btn-primary btn-block submit-btn" type="submit">Registrar</button>
         </form>
